[package]
name = "axum-timeout-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-prometheus = "0.7"
axum="0.7.7"
chrono = {  version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shadow-rs = "0.35.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = {version="0.7", features = ["codec"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs", "timeout"] }
tracing = "0.1"
tracing-subscriber= { version = "0.3", features = ["env-filter"] }

[build-dependencies]
shadow-rs = "0.35.1"
